--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,5 +18,9 @@ Suggests:
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Imports: 
+    dplyr,
+    janeaustenr,
     rlang,
-    tidytext
+    tibble,
+    tidytext,
+    tokenizers
